--- a/html/views/standard/scoreboard.html
+++ b/html/views/standard/scoreboard.html
@@ -9,7 +9,7 @@
 		<div class="ConnectionError">Not connected</div>
 		<div id="sb" sbContext="ScoreBoard" class="JamScore">
 			<div class="Team Team1 Left" sbContext="Team(1)">
-				<div class="Name AutoFit" sbTrigger="nameUpdate" sbTriggerOn="Name,AlternateName(scoreboard)"><a></a></div>
+				<div class="Name AutoFit" sbModify="nameUpdate" sbDisplay="Name,AlternateName(scoreboard)"></div>
 				<div class="Logo" sbTrigger="logoUpdate" sbTriggerOn="Logo">&nbsp;</div>
 				<div class="Score Box AutoFit" sbDisplay="Score"></div>
 				<div class="JamScore Box AutoFit" sbDisplay="JamScore"></div>
@@ -32,7 +32,7 @@
 			</div>
 
 			<div class="Team Team2 Right" sbContext="Team(2)">
-				<div class="Name AutoFit" sbTrigger="nameUpdate" sbTriggerOn="Name,AlternateName(scoreboard)"><a></a></div>
+				<div class="Name AutoFit" sbModify="nameUpdate" sbDisplay="Name,AlternateName(scoreboard)"></div>
 				<div class="Logo" sbTrigger="logoUpdate" sbTriggerOn="Logo">&nbsp;</div>
 				<div class="Score Box AutoFit" sbDisplay="Score"></div>
 				<div class="JamScore Box AutoFit" sbDisplay="JamScore"></div>
