--- a/html/views/standard/scoreboard.html
+++ b/html/views/standard/scoreboard.html
@@ -14,7 +14,7 @@
 				<div class="Score Box AutoFit" sbDisplay="Score"></div>
 				<div class="JamScore Box AutoFit" sbDisplay="JamScore"></div>
 				<div class="Timeouts Box">
-					<div class="Number AutoFit" sbDisplay="Timeouts"><div><a></a></div></div>
+					<div class="Number AutoFit" sbDisplay="Timeouts"></div>
 				</div>
 				<div class="DotTimeouts Box">
 					<div class="Dot Timeout1"></div>
@@ -23,7 +23,7 @@
 				</div>
 				<div class="OfficialReviews Box Header">OR</div>
 				<div class="OfficialReviews Box">
-					<div class="Number AutoFit" sbDisplay="OfficialReviews"><div><a></a></div></div>
+					<div class="Number AutoFit" sbDisplay="OfficialReviews"></div>
 				</div>
 				<div class="DotOfficialReviews Box">
 					<div class="Dot OfficialReview1"></div>
@@ -37,7 +37,7 @@
 				<div class="Score Box AutoFit" sbDisplay="Score"></div>
 				<div class="JamScore Box AutoFit" sbDisplay="JamScore"></div>
 				<div class="Timeouts Box">
-					<div class="Number AutoFit" sbDisplay="Timeouts"><div><a></a></div></div>
+					<div class="Number AutoFit" sbDisplay="Timeouts"></div>
 				</div>
 				<div class="DotTimeouts Box">
 					<div class="Dot Timeout1"></div>
@@ -46,7 +46,7 @@
 				</div>
 				<div class="OfficialReviews Box Header">OR</div>
 				<div class="OfficialReviews Box">
-					<div class="Number AutoFit" sbDisplay="OfficialReviews"><div><a></a></div></div>
+					<div class="Number AutoFit" sbDisplay="OfficialReviews"></div>
 				</div>
 				<div class="DotOfficialReviews Box">
 					<div class="Dot OfficialReview1"></div>
