--- a/html/views/scoreboard.css
+++ b/html/views/scoreboard.css
@@ -8,6 +8,15 @@
  * See the file COPYING for details.
  */
 
+body {
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+}
+
 #mainDiv {
 	-webkit-transform: translateZ(0);
 	-webkit-font-smoothing: antialiased;
