Fix intermission display

--- a/html/views/standard/index.html
+++ b/html/views/standard/index.html
@@ -82,7 +82,7 @@
 
 			<!-- Intermission -->
 			<div class="ShowInIntermission Clock Intermission">
-				<div class="Message Box AutoFit" sbDisplay="Setting(Intermission.PreGame), Setting(Intermission.Intermission), Setting(Intermission.Unofficial), Setting(Intermission.Official), OfficialScore, Clock(Intermission).Number, Clock(Intermission).MaximumNumber" sbModify="intermissionDisplay"></div>
+				<div class="Message Box AutoFit" sbDisplay="Setting(ScoreBoard.Intermission.PreGame), Setting(ScoreBoard.Intermission.Intermission), Setting(ScoreBoard.Intermission.Unofficial), Setting(ScoreBoard.Intermission.Official), OfficialScore, Clock(Intermission).Number, Clock(Intermission).MaximumNumber" sbModify="intermissionDisplay"></div>
 				<div class="Time Box AutoFit" sbDisplay="Clock(Intermission).Time" sbModify="toTime"></div>
 			</div>
 		</div>
