--- a/html/controls/operator.css
+++ b/html/controls/operator.css
@@ -74,6 +74,8 @@ table.RowTable { border-spacing: 0px; }
 	#TeamTime table.Time tr.TimeSet td.Button button>span { padding: 0.3em .6em; }
 
 	#TeamTime .JamScoreButton { font-size: 80%; }
+	tr.SpeedScore button>span { font-size: 80%; }
+	tr.SpeedScore:not(.Show) { display: none; }
 /* End Team/Time Tab */
 
 /* Policies */
