--- a/html/views/standard/index.html
+++ b/html/views/standard/index.html
@@ -3,7 +3,7 @@
 		<script type="text/javascript" src="/external/jquery/jquery.js"></script>
 		<script type="text/javascript" src="/json/core.js"></script>
 		<script type="text/javascript" src="/json/WS.js"></script>
-		<script type="text/javascript" src="scoreboard.js"></script>
+		<script type="text/javascript" src="common.js"></script>
 	</head>
 	<body>
 		<div class="ConnectionError">Not connected</div>
