Add a flat & bright box style (bright makes the box pure white rather than close to white)

--- a/html/views/scoreboard.css
+++ b/html/views/scoreboard.css
@@ -394,6 +394,12 @@ div.WhiteBox {
   border-radius: 5px !important;
 }
 
+#mainDiv.box_flat.bright div.WhiteBox {
+  background: #FFFFFF;
+  box-shadow: none;
+  border-radius: 5px !important;
+}
+
 #mainDiv.box_flat .FlatDark {
   color: #FFFFFF;
 }
