Fix initial behaviour on Toggle elements (Clock/Scores)

--- a/html/views/overlays/interactive/admin.html
+++ b/html/views/overlays/interactive/admin.html
@@ -9,10 +9,12 @@
 	<body>
 
 	<div id="Controls">
+
 		<div id="Core">
-		<button data-setting="Custom.Overlay.Clock" data-offstate="HideClock" data-onstate="ShowClock" value="ShowClock" class="Toggle">Clock</button><br/>
-		<button data-setting="Custom.Overlay.Score" data-offstate="HideScore" data-onstate="ShowScore" value="ShowScore" class="Toggle">Score</button><br/>
+			<button data-setting="Custom.Overlay.Clock" data-type="Toggle">Hide Clock</button><br/>
+			<button data-setting="Custom.Overlay.Score" data-type="Toggle">Hide Score</button><br/>
 		</div>
+
 		<br/>
 
 		<div id="Panel">
