--- a/html/views/overlays/interactive/index.html
+++ b/html/views/overlays/interactive/index.html
@@ -103,13 +103,13 @@
 			</div>
 
 			<div class="LowerThird LowerThirdSlide Wrapper OverlayPanel">
-				<h4 class="Subject" />
-				<h5 class="Text" />
+				<h4 class="Line1" sbDisplay="Custom.Overlay.LowerThird.Line1" />
+				<h5 class="Line2" sbDisplay="Custom.Overlay.LowerThird.Line2" />
 			</div>
 
 			<div class="LowerThird LowerThirdWobble Wrapper OverlayPanel">
-				<h4 class="Subject" />
-				<h5 class="Text" />
+				<h4 class="Line1" sbDisplay="Custom.Overlay.LowerThird.Line1" />
+				<h5 class="Line2" sbDisplay="Custom.Overlay.LowerThird.Line2" />
 			</div>
 
 	</div>
