--- a/html/views/overlays/interactive/admin.html
+++ b/html/views/overlays/interactive/admin.html
@@ -12,7 +12,9 @@
 
 		<p id="Core" class="Panel">
 			<h2>Elements</h2>
-			<button data-setting="Custom.Overlay.Clock" class="ToggleSwitch">Clock</button> <button data-setting="Custom.Overlay.Score" class="ToggleSwitch">Score</button><br/>
+			<button data-setting="Custom.Overlay.Clock" class="ToggleSwitch">Clock</button> 
+			<button data-setting="Custom.Overlay.Score" class="ToggleSwitch">Score</button>
+			<button data-setting="Custom.Overlay.ShowJammers" class="ToggleSwitch">Jammers</button><br/>
 		</p>
 
 		<br/><br/>
@@ -26,6 +28,7 @@
 				<option value="RosterTeam2">Roster (T2)</option>
 				<option value="PenaltyTeam1">Penalty (T1)</option>
 				<option value="PenaltyTeam2">Penalty (T2)</option>
+				<option value="myDiv">Test</option>
 				<option value="LowerThird" data-form=".ExtraFormLower">Lower Third</option>
 			</select>
 
@@ -44,7 +47,7 @@
 
 	</div>
 	<div id="Preview">
-		<iframe src="index.html" style="border: 3px solid black; margin: 10px; width: 95%; height: 95%; ">
+		<iframe src="index.html" style="border: 3px solid black; margin: 10px; width: 1080px; height: 720px; ">
 		</iframe>
 	</div>
 
