--- a/html/views/overlays/interactive/index.html
+++ b/html/views/overlays/interactive/index.html
@@ -6,20 +6,22 @@
 		<script type="text/javascript" src="/views/standard/common.js"></script>
 	</head>
 	<body>
-		<div id="sb" sbContext="ScoreBoard" class="JamScore StyleTraditional" style="margin-left: -100%;">
+		<div id="sb" sbContext="ScoreBoard" class="JamScore StyleTraditional" data-setting="Custom.Overlay.ShowJammers">
 
-			<div data-setting="Custom.Overlay.Score" data-onstate="ShowScore" data-offstate="HideScore" class="TeamBox ToggleElement Wrapper barBackground">	
+			<div class="PanelWrapperTop">
+
+				<div data-setting="Custom.Overlay.Score" class="TeamBox AnimatedPanel PanelHideTop Wrapper barBackground">	
 		
-				<div class="Team Team1 Row Wrapper" sbContext="Team(1)">
-					<div class="Name Box AutoFit" sbModify="nameUpdate" sbDisplay="Name,AlternateName(scoreboard)"></div>
-					<div class="Score Box AutoFit" sbDisplay="Score"></div>
-					<div class="Mini Box">
-						<div class="JamScore" sbDisplay="JamScore"></div>
-						<div class="LeadJammer Lead">&#9733;</div>
+					<div class="Team Team1 Row Wrapper" sbContext="Team(1)">
+						<div class="Name Box AutoFit" sbModify="nameUpdate" sbDisplay="Name,AlternateName(scoreboard)"></div>
+						<div class="Score Box AutoFit" sbDisplay="Score"></div>
+						<div class="Mini Box">
+							<div class="JamScore" sbDisplay="JamScore"></div>
+							<div class="LeadJammer Lead">&#9733;</div>
+						</div>
+						<div class="DotTimeouts Box"><div class="Dot Timeout1"></div><div class="Dot Timeout2"></div><div class="Dot Timeout3"></div><div class="Dot OfficialReview1"></div></div>
+						<div class="JammerBox ShowInJam Clock"><div class="JammerName AutoFit" sbDisplay="LeadJammer,StarPass,Position(Jammer),Position(Pivot),Skater" sbModify="jammer"></div></div>
 					</div>
-					<div class="DotTimeouts Box"><div class="Dot Timeout1"></div><div class="Dot Timeout2"></div><div class="Dot Timeout3"></div><div class="Dot OfficialReview1"></div></div>
-					<div class="JammerBox ShowInJam Clock"><div class="JammerName AutoFit" sbDisplay="LeadJammer,StarPass,Position(Jammer),Position(Pivot),Skater" sbModify="jammer"></div></div>
-				</div>
 
 				<div class="Team Team2 Row Wrapper" sbContext="Team(2)">
 					<div class="Name Box AutoFit" sbModify="nameUpdate" sbDisplay="Name,AlternateName(scoreboard)"></div>
@@ -31,7 +33,7 @@
 			</div>
 
 			
-			<div data-setting="Custom.Overlay.Clock"  data-onstate="ShowClock" data-offstate="HideClock" class="ClockBox TopClock ToggleElement Wrapper">
+			<div data-setting="Custom.Overlay.Clock"  class="ClockBox TopClock AnimatedPanel PanelHideTop Wrapper">
 
 					<div class="Wrapper Row ClockNames Clock ShowInJam ShowInLineup ShowInTimeout">
 						<div class="Box TextLeft Clock ShowInJam ShowInLineup ShowInTimeout Name AutoFit" sbDisplay="Name,Number" sbContext="Clock(Period)" sbModify="toClockInitialNumber"></div>
@@ -52,64 +54,67 @@
 					</div>
 
 			</div>
-	
-			<div class="ClockBox BottomClock Wrapper OverlayPanel">
-					<div class="Wrapper Clock SlideDown ShowInIntermission ShowInLineUp ShowInTimeout">
-						<div class="Box BigName AutoFit ShowInIntermission Clock" sbDisplay="Setting(ScoreBoard.Intermission.PreGame), Setting(Intermission.Intermission), Setting(Intermission.Unofficial), Setting(Intermission.Official), OfficialScore, Clock(Intermission).Number, Clock(Intermission).MaximumNumber" sbModify="intermissionDisplay"></div>
-						<div class="Box BoxLarge TextCenter Time AutoFit Clock ShowInIntermission" sbDisplay="Clock(Intermission).Time" sbModify="toTime"></div>
+
+			</div>	
+
+			<div class="PanelWrapperCenter">
+
+				<div class="ClockBox Wrapper OverlayPanel PanelHideBottom MediumPanel AnimatedPanel">
+						<div class="Wrapper Clock SlideDown ShowInIntermission ShowInLineUp ShowInTimeout">
+							<div class="Box BigName AutoFit ShowInIntermission Clock" sbDisplay="Setting(ScoreBoard.Intermission.PreGame), Setting(Intermission.Intermission), Setting(Intermission.Unofficial), Setting(Intermission.Official), OfficialScore, Clock(Intermission).Number, Clock(Intermission).MaximumNumber" sbModify="intermissionDisplay"></div>
+							<div class="Box BoxLarge TextCenter Time AutoFit Clock ShowInIntermission" sbDisplay="Clock(Intermission).Time" sbModify="toTime"></div>
+						</div>
+				</div>
+
+				<div class="PPJBox Wrapper PanelHideLeft OverlayPanel LargePanel AnimatedPanel">
+					<h1>Points Per Jam</h1>
+					<h4 class="htop" sbDisplay="AlternateName(overlay)" sbContext="Team(1)"></h4>	
+					<div class="PPJContainer Wrapper">
+						<div class="Wrapper Team Team1">
+							<div class="Period Period1"></div><div class="Period Period2"></div>
+						</div>
+						<div class="Wrapper Team Team2">
+							<div class="Period Period1"></div><div class="Period Period2"></div>
+						</div>
 					</div>
-			</div>
-
-			<div class="PPJBox Wrapper OverlayPanel">
-				<h1>Points Per Jam</h1>
-				<h4 class="htop" sbDisplay="AlternateName(overlay)" sbContext="Team(1)"></h4>	
-				<div class="PPJContainer Wrapper">
-				<div class="Wrapper Team Team1">
-					<div class="Period Period1"></div><div class="Period Period2"></div>
+					<h4 class="hbottom" sbDisplay="AlternateName(overlay)" sbContext="Team(2)"></h4>	
 				</div>
-				<div class="Wrapper Team Team2">
-					<div class="Period Period1"></div><div class="Period Period2"></div>
+
+
+				<div class="RosterTeam1 RosterTeam PanelHideLeft Wrapper OverlayPanel LargePanel AnimatedPanel">
+					<h1 sbDisplay="AlternateName(overlay)" sbContext="Team(1)"></h1>	
+					<h2>Team Roster</h2>
+					<div class="Wrapper Team Team1 SortBox">
+					</div>
 				</div>
-			</div>
-				<h4 class="hbottom" sbDisplay="AlternateName(overlay)" sbContext="Team(2)"></h4>	
-			</div>
 
-			<div class="RosterTeam1 RosterTeam Wrapper OverlayPanel">
-				<h1 sbDisplay="AlternateName(overlay)" sbContext="Team(1)"></h1>	
-				<h2>Team Roster</h2>
-				<div class="Wrapper Team Team1 SortBox">
+				<div class="RosterTeam2 RosterTeam PanelHideRight Wrapper OverlayPanel LargePanel AnimatedPanel">
+					<h1 sbDisplay="AlternateName(overlay)" sbContext="Team(2)"></h1>	
+					<h2>Team Roster</h2>
+					<div class="Wrapper Team Team2 SortBox">
+					</div>
 				</div>
-			</div>
 
-			<div class="RosterTeam2 RosterTeam Wrapper OverlayPanel">
-				<h1 sbDisplay="AlternateName(overlay)" sbContext="Team(2)"></h1>	
-				<h2>Team Roster</h2>
-				<div class="Wrapper Team Team2 SortBox">
+				<div class="PenaltyTeam1 PenaltyTeam PanelHideLeft Wrapper OverlayPanel LargePanel AnimatedPanel">
+					<h1>Penalty Board</h1>
+					<h2 sbDisplay="AlternateName(overlay)" sbContext="Team(1)"></h2>	
+					<div class="Wrapper Team Team1 SortBox">
+					</div>
 				</div>
-			</div>
 
-			<div class="PenaltyTeam1 PenaltyTeam Wrapper OverlayPanel">
-				<h1>Penalty Board</h1>
-				<h2 sbDisplay="AlternateName(overlay)" sbContext="Team(1)"></h2>	
-				<div class="Wrapper Team Team1 SortBox">
+				<div class="PenaltyTeam2 PenaltyTeam PanelHideRight Wrapper OverlayPanel LargePanel AnimatedPanel">
+					<h1>Penalty Board</h1>
+					<h2 sbDisplay="AlternateName(overlay)" sbContext="Team(2)"></h2>	
+					<div class="Wrapper Team Team2 SortBox">
+					</div>
 				</div>
+
 			</div>
 
-			<div class="PenaltyTeam2 PenaltyTeam Wrapper OverlayPanel">
-				<h1>Penalty Board</h1>
-				<h2 sbDisplay="AlternateName(overlay)" sbContext="Team(2)"></h2>	
-				<div class="Wrapper Team Team2 SortBox">
+			<div class="PanelWrapperLeft">
+				<div class="LowerThird Wrapper OverlayPanel AnimatedPanel PanelHideLeft">
+					<h4 class="Line1" sbDisplay="Custom.Overlay.LowerThird.Line1" /> <h5 class="Line2" sbDisplay="Custom.Overlay.LowerThird.Line2" />
 				</div>
-			</div>
-
-			<div class="LowerThird LowerThirdSlide Wrapper OverlayPanel">
-				<h4 class="Line1" sbDisplay="Custom.Overlay.LowerThird.Line1" />
-				<h5 class="Line2" sbDisplay="Custom.Overlay.LowerThird.Line2" />
-			</div>
-
-			<div class="LowerThird LowerThirdWobble Wrapper OverlayPanel">
-				<h4 class="Line1" sbDisplay="Custom.Overlay.LowerThird.Line1" />
-				<h5 class="Line2" sbDisplay="Custom.Overlay.LowerThird.Line2" />
 			</div>
 
 	</div>
